--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ header h1 {
     align-items: center;
     border: 2px dashed #ddd;
     border-radius: 8px;
-    background-color: #f4f4f4;
+    background-color: #ffffff;
     margin-top: 20px;
 }
 
