--- a/css/style.css
+++ b/css/style.css
@@ -159,7 +159,14 @@ header h1 {
 .boxplot {
     cursor: pointer;
     width: 100%;
-    height: 200px; /* Adjust the height as needed */
+    height: 200px;
     margin: 0 10px;
 }
 
+.boxplot-legend {
+    border: 1px solid #ddd; /* Light border for visibility */
+    margin-left: 10px; /* Adjust spacing */
+    background-color: #f9f9f9; /* Light background to differentiate */
+    width: 100%;
+    height: 200px;
+  }
